# protosocket

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yaml  release.yaml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: channel.rs  safety_perf.rs
example/: Cargo.toml
example-messagepack/: Cargo.toml
example-messagepack/src/: client.rs  messages.rs  server.rs
example-pool/: Cargo.toml
example-pool/src/: server.rs
example-proto/: Cargo.toml
example-proto-spawn/: Cargo.toml
example-proto-spawn-stream/: Cargo.toml
example-proto-spawn-stream/src/: client.rs  messages.rs  server.rs
example-proto-spawn/src/: client.rs  messages.rs  server.rs
example-proto-stream/: Cargo.toml
example-proto-stream/src/: client.rs  messages.rs  server.rs  tracing_stuff.rs
example-proto-tls/: Cargo.toml
example-proto-tls/src/: client.rs  server.rs
example-proto/proto/: echo.proto
example-proto/src/: client.rs  messages.rs  server.rs  tracing_stuff.rs
example-telnet/: Cargo.toml
example-telnet/src/: main.rs
example/src/: main.rs
level-runtime/: Cargo.toml  README.md
level-runtime/src/: builder.rs  concurrency_tracker.rs  lib.rs  runtime.rs  worker.rs
protocolsocket-prost/: Cargo.toml
protocolsocket-prost/src/: lib.rs
protocolsocket-server/: Cargo.toml
protocolsocket-server/src/: connection.rs  connection_server.rs  error.rs  lib.rs  listener_server.rs
protosocket-connection/: Cargo.toml  README.md
protosocket-connection/examples/: custom_allocator.rs
protosocket-connection/src/: connection.rs  connection_driver.rs  encoding.rs  error.rs  lib.rs  message_reactor.rs  pooled_encoder.rs  send_budget.rs  socket_listener.rs  types.rs
protosocket-efa/: Cargo.toml  README.md
protosocket-efa/src/: lib.rs
protosocket-efa/src/efa/: bootstrap.rs  driver.rs  error.rs  fabric.rs  ffi.rs  listener.rs  mod.rs  provider.rs  stream.rs
protosocket-efa/tests/: loopback.rs
protosocket-messagepack/: Cargo.toml  README.md
protosocket-messagepack/src/: decoder.rs  lib.rs  serializer.rs
protosocket-prost/: Cargo.toml  README.md
protosocket-prost/src/: decoder.rs  error.rs  lib.rs  prost_client.rs  prost_client_registry.rs  prost_serializer.rs  prost_socket.rs  protocolbuffer_socket.rs  serializer.rs
protosocket-rpc/: Cargo.toml  README.md
protosocket-rpc-client/: Cargo.toml
protosocket-rpc-client/src/: completion_reactor.rs  completion_streaming.rs  completion_unary.rs  configuration.rs  lib.rs  rpc_client.rs  rpc_drop_guard.rs
protosocket-rpc/src/: configuration.rs  error.rs  lib.rs  message.rs  rpc_client.rs
protosocket-rpc/src/client/: completion_reactor.rs  configuration.rs  connection_pool.rs  mod.rs  rpc_client.rs  stream_connector.rs
protosocket-rpc/src/client/reactor/: completion_reactor.rs  completion_registry.rs  completion_streaming.rs  completion_unary.rs  mod.rs  rpc_drop_guard.rs
protosocket-rpc/src/reactor/: completion_registry.rs  completion_streaming.rs  completion_unary.rs  mod.rs
protosocket-rpc/src/server/: abortable.rs  abortion_tracker.rs  connection_server.rs  forward.rs  forward_streaming.rs  forward_unary.rs  mod.rs  rpc_responder.rs  rpc_stream.rs  rpc_submitter.rs  server_traits.rs  socket_listener.rs  socket_server.rs  spawn.rs
protosocket-server/: Cargo.toml  README.md
protosocket-server/src/: connection_acceptor.rs  connection_server.rs  error.rs  lib.rs  listener_server.rs  types.rs
spillway/: Cargo.toml  README.md
spillway/src/: error.rs  lib.rs  receiver.rs  sender.rs  shared.rs
