[workspace]
resolver = "2"

members = [
    "example-proto",
    "example-telnet",
    "protosocket-connection",
    "protosocket-prost",
    "protosocket-rpc-client",
    "protosocket-server",
]

[workspace.package]
version = "0.6.1"
authors = ["kvc0"]
repository = "https://github.com/kvc0/protosocket"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["tcp", "protobuf", "service", "performance"]
categories = ["web-programming"]



[workspace.dependencies]
protosocket             = { path = "protosocket-connection", version = "0" }
protosocket-rpc-client  = { path = "protosocket-rpc-client" }
protosocket-server      = { path = "protosocket-server" }
protosocket-prost       = { path = "protosocket-prost" }

bytes                   = { version = "1.6" }
env_logger              = { version = "0.11" }
futures                 = { version = "0.3" }
k-lock                  = { version = "0.2" }
log                     = { version = "0.4" }
prost                   = { version = "0.13" }
thiserror               = { version = "1.0" }
tokio                   = { version = "1.39", features = ["net", "rt"] }
tokio-util              = { version = "0.7" }
