[workspace]
resolver = "2"

members = [
    "benchmarks",
    "example-messagepack",
    "example-pool",
    "example-proto",
    "example-proto-tls",
    "example-telnet",
    "level-runtime",
    "protosocket-connection",
    "protosocket-messagepack",
    "protosocket-prost",
    "protosocket-rpc",
    "protosocket-server",
    "spillway",
]

[workspace.package]
version = "0.12.1"
authors = ["kvc0"]
repository = "https://github.com/kvc0/protosocket"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["tcp", "protobuf", "service", "performance"]
categories = ["web-programming"]



[workspace.dependencies]
level-runtime           = { path = "level-runtime", version = "0" }
protosocket             = { path = "protosocket-connection", version = "0" }
protosocket-messagepack = { path = "protosocket-messagepack" }
protosocket-rpc         = { path = "protosocket-rpc" }
protosocket-server      = { path = "protosocket-server" }
protosocket-prost       = { path = "protosocket-prost" }
spillway                = { path = "spillway" }

ahash                   = { version = "0" }
bytes                   = { version = "1.6" }
criterion               = { version = "0" }
env_logger              = { version = "0.11" }
futures                 = { version = "0.3" }
log                     = { version = "0.4" }
prost                   = { version = "0.14" }
rand                    = { version = "0.9" }
rcgen                   = { version = "0.14" }
rmp                     = { version = "0.8" }
rmp-serde               = { version = "1.3" }
rustls-pemfile          = { version = "2.2" }
rustls-pki-types        = { version = "1.12" }
serde                   = { version = "1.0" }
socket2                 = { version = "0.6" }
thiserror               = { version = "2.0" }
tokio                   = { version = "1.39", features = ["net", "rt"] }
tokio-rustls            = { version = "0.26" }
tokio-util              = { version = "0.7" }
tracing                 = { version = "0.1" }
webpki-roots            = { version = "1" }




[profile.release-with-debug]
inherits = "release"
debug = true

