[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
bench = false

[[bench]]
name = "safety_perf"
harness = false

[[bench]]
name = "channel"
harness = false

[dev-dependencies]
spillway                = { workspace = true }

bytes                   = { workspace = true }
criterion               = { workspace = true, features = ["async_tokio"] }
env_logger              = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
rand                    = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }
