[package]
name = "example-proto-spawn-stream"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-proto-spawn-stream-server"
path = "src/server.rs"

[[bin]]
name = "example-proto-spawn-stream-client"
path = "src/client.rs"

[dependencies]
protosocket             = { workspace = true }
protosocket-prost       = { workspace = true }
protosocket-rpc         = { workspace = true }

env_logger              = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
prost                   = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }

histogram               = { version = "0.11" }
