[package]
name = "example-proto"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-proto-server"
path = "src/server.rs"

[[bin]]
name = "example-proto-client"
path = "src/client.rs"

[dependencies]
protosocket             = { workspace = true }
protosocket-prost       = { workspace = true }
protosocket-server      = { workspace = true }

bytes                   = { workspace = true }
env_logger              = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
prost                   = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }
