[package]
name = "example-proto"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-proto-server"
path = "src/server.rs"

[[bin]]
name = "example-proto-client"
path = "src/client.rs"

[dependencies]
protosocket             = { workspace = true, features = ["tracing"]}
protosocket-prost       = { workspace = true }
protosocket-rpc         = { workspace = true }
protosocket-server      = { workspace = true }

bytes                   = { workspace = true }
env_logger              = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
prost                   = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }
tracing                 = { workspace = true }

histogram               = { version = "0.11" }
opentelemetry           = { version = "0.31" }
opentelemetry_sdk       = { version = "0.31" }
opentelemetry-otlp      = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry   = { version = "0.32", default-features = false }
tracing-subscriber      = { version = "0.3" }
