[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
protosocket-connection  = { workspace = true }
protosocket-server      = { workspace = true }

bytes                   = { workspace = true }
env_logger              = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }
