[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes                   = { workspace = true }
env_logger              = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
protocolsocket-server   = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }
