[package]
name = "level-runtime"
description = "Conveniences for tokio thread-per-core runtime configuration"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures                 = { workspace = true }
log                     = { workspace = true }
rand                    = { workspace = true }
tokio                   = { workspace = true }
