[package]
name = "protosocket"
version = "0.1.0"
edition = "2021"
description = "Message-oriented nonblocking tcp stream"
license = "Apache-2.0"
authors = ["kvc0"]
readme = "../README.md"
repository = "https://github.com/kvc0/protosocket"
keywords = ["tcp", "protobuf", "service", "performance"]
categories = ["web-programming"]

[dependencies]
bytes                   = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
mio                     = { workspace = true, features = ["net", "os-poll"] }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
tokio-util              = { workspace = true }
