[package]
name = "protosocket"
description = "Message-oriented nonblocking tcp stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes                   = { workspace = true }
crossbeam               = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
serde                   = { workspace = true, optional = true }
socket2                 = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
tokio-rustls            = { workspace = true }
tokio-util              = { workspace = true }
