[package]
name = "protosocket"
description = "Message-oriented nonblocking tcp stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
tracing = ["dep:tracing"]

[dependencies]
spillway                = { workspace = true }

bytes                   = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
socket2                 = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
tokio-rustls            = { workspace = true }
tokio-util              = { workspace = true }
tracing                 = { workspace = true, optional = true}
