[package]
name = "protosocket-messagepack"
description = "Message-oriented nonblocking tcp stream - messagepack serde bindings"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protosocket             = { workspace = true }

bytes                   = { workspace = true }
log                     = { workspace = true }
serde                   = { workspace = true }
rmp                     = { workspace = true }
rmp-serde               = { workspace = true }
