[package]
name = "protosocket-prost"
version = "0.1.0"
edition = "2021"

[dependencies]
protosocket-connection  = { workspace = true }

bytes                   = { workspace = true }
log                     = { workspace = true }
mio                     = { workspace = true }
prost                   = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
