[package]
name = "protosocket-prost"
version = "0.1.0"
edition = "2021"
description = "Message-oriented nonblocking tcp stream - protocol buffers bindings"
license = "Apache-2.0"
authors = ["kvc0"]
readme = "../README.md"
repository = "https://github.com/kvc0/protosocket"
keywords = ["tcp", "protobuf", "service", "performance"]
categories = ["web-programming"]

[dependencies]
protosocket             = { workspace = true }

bytes                   = { workspace = true }
log                     = { workspace = true }
mio                     = { workspace = true }
prost                   = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
