[package]
name = "protosocket-prost"
description = "Message-oriented nonblocking tcp stream - protocol buffers bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protosocket             = { workspace = true, version = "0.0.1" }

bytes                   = { workspace = true }
log                     = { workspace = true }
mio                     = { workspace = true }
prost                   = { workspace = true }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
