[package]
name = "protosocket-rpc"
description = "RPC using protosockets"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protosocket             = { workspace = true }

futures                 = { workspace = true }
k-lock                  = { workspace = true }
log                     = { workspace = true }
tokio                   = { workspace = true }
tokio-util              = { workspace = true }
thiserror               = { workspace = true }
