[package]
name = "protosocket-rpc"
description = "RPC using protosockets"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
level-runtime           = { workspace = true }
protosocket             = { workspace = true }
spillway                = { workspace = true }

ahash                   = { workspace = true }
futures                 = { workspace = true }
k-lock                  = { workspace = true }
log                     = { workspace = true }
rand                    = { workspace = true }
rustls-pki-types        = { workspace = true }
socket2                 = { workspace = true, features = ["all"] }
tokio                   = { workspace = true }
tokio-rustls            = { workspace = true }
tokio-util              = { workspace = true }
thiserror               = { workspace = true }
webpki-roots            = { workspace = true }

[dev-dependencies]
prost                   = { workspace = true }
tokio                   = { workspace = true, features = ["full"] }
