[package]
name = "protosocket-server"
description = "Message-oriented nonblocking tcp stream - server tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protosocket             = { workspace = true, version = "*" }

bytes                   = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
mio                     = { workspace = true, features = ["net", "os-poll"] }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
