[package]
name = "protosocket-server"
description = "Message-oriented nonblocking tcp stream - server tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protosocket             = { workspace = true }
spillway                = { workspace = true }

bytes                   = { workspace = true }
futures                 = { workspace = true }
log                     = { workspace = true }
socket2                 = { workspace = true, features = ["all"] }
thiserror               = { workspace = true }
tokio                   = { workspace = true }
